# m3u8-harvester

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: desktop-release.yml  docker-publish.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: Cargo.toml  build.rs
apps/server/src/: main.rs
apps/server/src/handlers/: file_handler.rs  meta_handler.rs  mod.rs  setting_handler.rs  task_handler.rs  tmdb_handler.rs
apps/server/src/services/: download_service.rs  mod.rs
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.vue  style.css
apps/web/src/components/features/: LocalFiles.vue  LocalFolderTree.vue  TaskList.vue
apps/web/src/components/layout/: Footer.vue  Header.vue
apps/web/src/components/modals/: AddTaskModal.vue  OverwriteModal.vue  SettingsModal.vue  VariantSelectionModal.vue
apps/web/src/components/ui/: CommonIcon.vue  icons.ts
apps/web/src/constants/: ui.ts
apps/web/src/services/: api.ts
apps/web/src/stores/: appStore.ts
apps/web/src/types/: app.ts
crates/m3u8-core/: Cargo.toml
crates/m3u8-core/src/: lib.rs
crates/m3u8-core/src/core/: downloader.rs  mod.rs
crates/m3u8-core/src/db/: mod.rs
crates/m3u8-core/src/models/: mod.rs  setting.rs  task.rs
crates/m3u8-core/src/services/: download_service.rs  file_service.rs  mod.rs  setting_service.rs  task_service.rs  tmdb_service.rs
crates/m3u8-core/src/utils/: m3u8.rs  merger.rs  mod.rs
docs/: PROJECT_OVERVIEW.md
docs/superpowers/plans/: 2026-05-11-tmdb-task-metadata.md
docs/superpowers/specs/: 2026-05-11-tmdb-task-metadata-design.md
