[workspace]
members = [
    "apps/server",
    "crates/m3u8-core",
]
resolver = "2"

[workspace.package]
version = "1.0.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
