[package]
name = "m3u8-desktop"
version = "1.0.2"
description = "m3u8-harvester desktop version"
authors = ["hpyer"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "2.0.1"
dirs = "5.0"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
m3u8-core = { path = "../../../crates/m3u8-core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
